# robotics_toolkit

./: CMakeLists.txt  package.xml
include/robotics_toolkit/: TODO.txt
include/robotics_toolkit/design_patterns/: Factory.h  Memento.h  Singleton.h  Uncopyable.h
include/robotics_toolkit/geometry/: GeometryUtils.h  GeometryUtilsROS.h  GeometryUtilsSerialization.h  Quaternion.h  Rotation2.h  Rotation3.h  RotationNBase.h  Transform2.h  Transform3.h
include/robotics_toolkit/linear_algebra/: Matrix2x2.h  Matrix3x3.h  Matrix4x4.h  MatrixNxMBase.h  MatrixNxNBase.h  Vector2.h  Vector3.h  Vector4.h  VectorNBase.h
include/robotics_toolkit/math/: MathDefinitions.h
include/robotics_toolkit/param/: RosParam.h
include/robotics_toolkit/timing/: Stopwatch.h  TimeConversions.h  Timer.h
test/: run_tests.sh
test/design_patterns/: test_factory.cc  test_memento.cc  test_singleton.cc
test/geometry/: test_equals.cc  test_geometry.cc  test_so3_error.cc
test/linear_algebra/: test_linear_algebra.cc
test/math/: test_math.cc
test/timing/: test_conversions.cc  test_stopwatch.cc  test_timer.cc
