<?xml version="1.0"?>
<package>
  <name>robotics_toolkit</name>
  <version>0.0.0</version>
  <description>The robotics_toolkit package</description>

  <maintainer email="enelson@cmu.edu">Erik Nelson</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>

</package>
